--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,8 +4,15 @@
 @import "tailwindcss/utilities";
 @import url("https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100&family=IBM+Plex+Mono:wght@100;400;600;700&family=Manrope:wght@200..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
+
 .servicesAnimation {
   animation: animateHorizontal 30s linear infinite;
+}
+
+.testimonialCard{
+  background-image: url(../assets/testimonial-bg.png);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 @keyframes animateHorizontal {
