--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,36 @@
   background-repeat: no-repeat;
 }
 
+.footerSerivce{
+  color: rgb(93,95,103);
+  font-weight: 500;
+}
+
+.footerListContainer{
+  display: flex;
+  flex-direction: column;
+}
+
+.footerList{
+  font-size: 1;
+  padding: .5em 0;
+  position: relative; 
+  text-decoration: rgb(93,95,103) underline ;
+  text-decoration-thickness: 0.5;
+}
+
+/* .footerList::after{
+  content: "";
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(93,95,103);
+  
+} */
+
+
 @keyframes animateHorizontal {
   0% {
     transform: translateX(10%);
