--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,10 +4,17 @@
 @import "tailwindcss/utilities";
 @import url("https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100&family=IBM+Plex+Mono:wght@100;400;600;700&family=Manrope:wght@200..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
+*::after,*::before , *{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
 
 .servicesAnimation {
   animation: animateHorizontal 30s linear infinite;
 }
+
 
 .testimonialCard{
   background-image: url(../assets/testimonial-bg.png);
