--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -110,6 +110,13 @@ body {
   left: 1em !important;
 }
 
+@media screen and (min-width:884px) and (max-width:1114px) {
+  .contactText{
+    top: 16em !important ;
+    left:4em !important
+  }
+}
+
 .socials{
   display: flex !important;
 }
