--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -93,12 +93,21 @@ body {
 
 
 .serviceText{
-  left: 20em !important;
+  left: 20em;
 }
+
+@media screen and (min-width:640px) and (max-width:1014px) {
+  .serviceText{
+    left: 14em ;
+  }
+}
+
+
 
 .serviceParagraph{
   width: 100% !important;
 }
+
 
 .star{
   display: none;
