--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -96,39 +96,77 @@ body {
   left: 20em;
 }
 
-@media screen and (min-width:640px) and (max-width:1014px) {
-  .serviceText{
-    left: 14em ;
-  }
-}
-
-
-
 .serviceParagraph{
   width: 100% !important;
 }
-
 
 .star{
   display: none;
 }
 
 .contactText{
-  top: 14em !important;
-  width: 90% !important;
-  left: 1em !important;
-}
-
-@media screen and (min-width:884px) and (max-width:1114px) {
-  .contactText{
-    top: 16em !important ;
-    left:4em !important
-  }
+  top: 14em !important ;
+  width: 90% ;
+  left: 1em ;
 }
 
 .socials{
   display: flex !important;
 }
 
+@media screen and (min-width:640px) and (max-width:1014px) {
+  .serviceText{
+    left: 14em ;
+  }
+  .contactText{
+    top: 7em !important;
+  }
+  .header{
+    font-size: .8rem !important;
+  }
+  .title{
+    font-size: 1rem !important;
+    line-height: 0.7em !important;
+  }
+  .navtext{
+    font-size: .8rem !important;
+    width:60% !important;
+    transform: translateX(6em) !important;
+  }
+}
 
+@media screen and (min-width:1114px) and (max-width:1200px) {
+  .socials{
+    top: 8.5em !important;
+    width: 15% !important;
+    padding: .5em !important;
+  }
+}
 
+@media screen and (min-width:1114px) {
+ 
+  .contactText{
+    top: 11em !important;
+  }
+  .header{
+    font-size: 1rem !important;
+  }
+  .title{
+    font-size: 1.2rem !important;
+    line-height: 1.5em !important;
+  }
+  .navtext{
+    font-size: .8rem !important;
+    width:60% !important;
+    transform: translateX(6em) !important;
+  }
+}
+
+@media screen and (min-width:1440px) {
+  .contactText{
+    top: 13em !important;
+  }
+  .title{
+    font-size: 2em !important;
+  }
+}
