--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,19 @@ body {
   color: rgb(228, 228, 230);
 }
 
+/*desktop nav styling*/
+.header-nav {
+  clip-path: none;
+  margin: auto;
+  height: auto;
+  position: initial;
+  border-top: 2px solid rgb(28, 28, 33);
+  border-left: 2px solid rgb(28, 28, 33);
+  border-right: 2px solid rgb(28, 28, 33);
+  border-radius: 1em 1em 0 0;
+  overflow: hidden;
+}
+
 .hero {
   background-image: url(/src/assets/about/Clip\ path\ group.png);
   background-repeat: no-repeat;
@@ -66,22 +79,11 @@ body {
   
 } */
 
-
-
 @media screen and (max-width: 768px) {
   .hero {
     background-image: none;
   }
 }
-
-/* @keyframes animateHorizontal {
-  0% {
-    transform: translateX(10%);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
-} */
 
 /*about styling*/
 
@@ -91,85 +93,101 @@ body {
   background-repeat: no-repeat;
 }
 
-
-.serviceText{
+.serviceText {
   left: 20em;
 }
 
-.serviceParagraph{
+.serviceParagraph {
   width: 100% !important;
 }
 
-.star{
+.star {
   display: none;
 }
 
-.contactText{
+.contactText {
   top: 14em !important ;
-  width: 90% ;
-  left: 1em ;
+  width: 90%;
+  left: 1em;
 }
 
-.socials{
+.socials {
   display: flex !important;
 }
 
-@media screen and (min-width:640px) and (max-width:1014px) {
-  .serviceText{
-    left: 14em ;
+@media screen and (min-width: 640px) and (max-width: 1014px) {
+  .serviceText {
+    left: 14em;
   }
-  .contactText{
+  .contactText {
     top: 7em !important;
   }
-  .header{
-    font-size: .8rem !important;
+  .header {
+    font-size: 0.8rem !important;
   }
-  .title{
+  .title {
     font-size: 1rem !important;
     line-height: 0.7em !important;
   }
-  .navtext{
-    font-size: .8rem !important;
-    width:60% !important;
+  .navtext {
+    font-size: 0.8rem !important;
+    width: 60% !important;
     transform: translateX(6em) !important;
   }
 }
 
-@media screen and (min-width:1114px) and (max-width:1200px) {
-  .socials{
+@media screen and (min-width: 1114px) and (max-width: 1200px) {
+  .socials {
     top: 8.5em !important;
     width: 15% !important;
-    padding: .5em !important;
+    padding: 0.5em !important;
   }
 }
 
-@media screen and (min-width:1114px) {
- 
-  .contactText{
+@media screen and (min-width: 1114px) {
+  .contactText {
     top: 11em !important;
   }
-  .header{
+  .header {
     font-size: 1rem !important;
   }
-  .title{
+  .title {
     font-size: 1.2rem !important;
     line-height: 1.5em !important;
   }
-  .navtext{
-    font-size: .8rem !important;
-    width:60% !important;
+  .navtext {
+    font-size: 0.8rem !important;
+    width: 60% !important;
     transform: translateX(6em) !important;
   }
 }
 
-@media screen and (min-width:1440px) {
-  .contactText{
+@media screen and (min-width: 1440px) {
+  .contactText {
     top: 13em !important;
   }
-  .title{
+  .title {
     font-size: 2em !important;
   }
-
 }
 
+/*mobile nav styles*/
+@media screen and (max-width: 1024px) {
+  .header-nav {
+    clip-path: circle(0% at 90% 10%);
+    background-color: rgb(228, 228, 230);
+    position: fixed;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 99;
+    transition: clip-path 1s ease-in-out;
+    border-radius: 0;
+    overflow: hidden;
+  }
 
+  .responsive_nav {
+    clip-path: circle(75%);
+  }
+}
